--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%) !important;
-    background-color: black;
+    background-color: rgb(0, 0, 0,1);
     color: white;
     width: 400px !important;
     padding: 20px;
