--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,14 @@
     width: 400px !important;
     padding: 20px;
     padding-top: 30px;
+    z-index: 99999;
 }
 .btnCloseForm{
     position: absolute;
     bottom: 92%;
     right: 2%;
     cursor: pointer;
+    z-index: 99999;
 }
 
 .deleteIcon{
@@ -26,6 +28,7 @@
     right: 10px;
     bottom: 20px;
     cursor: pointer;
+    z-index: 99999;
 }
 /* .create{
     position: fixed;
